# SpaceShooter

./: .gitignore  0001-Fix.patch  CMakeLists.txt  README.md
include/space-shooter/: game_state.hpp  utils.hpp
include/space-shooter/ecs/: component.hpp  ecs.hpp  entity.hpp  manager.hpp  system.hpp
include/space-shooter/ecs/components/: all.hpp  audio_component.hpp  clock_component.hpp  damage_component.hpp  health_component.hpp  input_component.hpp  music_component.hpp  position_component.hpp  score_component.hpp  sprite_component.hpp  tag_component.hpp  text_blink_component.hpp  text_component.hpp  texture_component.hpp  timer_component.hpp  velocity_component.hpp
include/space-shooter/ecs/entities/: all.hpp  background.hpp  background_music.hpp  enemy_missile.hpp  enemy_ship.hpp  enemy_spawner.hpp  level_timer.hpp  menu_entite.hpp  menu_entity.hpp  player_missile.hpp  player_ship.hpp  player_ship_health_bar.hpp  scene_exit.hpp  scene_menu.hpp  scene_rules.hpp  scene_victory.hpp  score_display.hpp  sound_effects.hpp
include/space-shooter/ecs/systems/: all.hpp  audio_system.hpp  clean_killed_ships_system.hpp  clean_missiles_system.hpp  clean_sounds_system.hpp  clock_system.hpp  collision_system.hpp  enemy_chasing_system.hpp  enemy_spawner_system.hpp  health_bar_display_system.hpp  input_system.hpp  menu_system.hpp  movement_spawner_system.hpp  movement_system.hpp  music_system.hpp  player_death_system.hpp  rendering_system.hpp  scene_exit_system.hpp  scene_level_system.hpp  scene_menu_system.hpp  scene_rules_system.hpp  scene_victory_system.hpp  scoring_system.hpp  shooting_system.hpp  text_blink_system.hpp  text_rendering_system.hpp  timer_system.hpp  victory_system.hpp
include/space-shooter/scenes/: all.hpp  exit.hpp  gameover.hpp  level.hpp  menu.hpp  rules.hpp  victory.hpp
src/space-shooter/: game_state.cpp  main.cpp  utils.cpp
src/space-shooter/ecs/: entity.cpp  manager.cpp  system.cpp
src/space-shooter/ecs/components/: audio_component.cpp  clock_component.cpp  damage_component.cpp  health_component.cpp  input_component.cpp  music_component.cpp  position_component.cpp  score_component.cpp  sprite_component.cpp  tag_component.cpp  text_blink_component.cpp  text_component.cpp  texture_component.cpp  timer_component.cpp  velocity_component.cpp
src/space-shooter/ecs/entites/: background.cpp  background_music.cpp  enemy_missile.cpp  enemy_ship.cpp  enemy_spawner.cpp  level_timer.cpp  menu_entite.cpp  menu_entity.cpp  player_missile.cpp  player_ship.cpp  player_ship_health_bar.cpp  scene_exit.cpp  scene_menu.cpp  scene_rules.cpp  scene_victory.cpp  score_display.cpp  sound_effects.cpp
src/space-shooter/ecs/systems/: audio_system.cpp  clean_killed_ships_system.cpp  clean_missiles_system.cpp  clean_sounds_system.cpp  clock_system.cpp  collision_system.cpp  enemy_chasing_system.cpp  enemy_spawner_system.cpp  health_bar_display_system.cpp  input_system.cpp  menu_system.cpp  movement_spawner_system.cpp  movement_system.cpp  music_system.cpp  player_death_system.cpp  rendering_system.cpp  scene_exit_system.cpp  scene_level_system.cpp  scene_menu_system.cpp  scene_rules_system.cpp  scene_victory_system.cpp  scoring_system.cpp  shooting_system.cpp  text_blink_system.cpp  text_rendering_system.cpp  timer_system.cpp  victory_system.cpp
src/space-shooter/scenes/: exit.cpp  gameover.cpp  level.cpp  menu.cpp  rules.cpp  victory.cpp
utils/: asan.supp  lsan.supp  version.hpp.in
